--- a/tests/sim_test_1_config.yaml
+++ b/tests/sim_test_1_config.yaml
@@ -1,5 +1,6 @@
 
 simulator:
+  seed: [1250, 100, 200] # one seed required for each episode
   walking: True
   num_agents: 20
   num_targets: 5
@@ -63,10 +64,13 @@ agent:
   max_force: 0.1
   mean_init_velocity: 1.0
   variance_init_velocity: 0.2
-  init_range_low: 0.2
-  init_range_high: 0.7
-  height_init_max: 750
-  random_walk: False
+  init_range_low: 0.4
+  init_range_high: 0.6
+  height_range_low: 0.0
+  height_range_high: 1.0
+  height_init_min: 100
+  height_init_max: 300
+  random_walk: True
 
 meshes:
     # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
