--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,8 +58,11 @@ jobs:
         run: |
                 export GOOGLE_APPLICATION_CREDENTIALS="$(pwd)/config-local/collab-data-463313-c340ad86b28e.json"
                 export GITHUB_ACTION=true
-            
-      - name: Install Python dependencies
+           
+      - name: Main Environment Setup 
+        run:  bash ./setup.sh
+                
+      - name: Development Environment Setup
         run: |
           python -m pip install --upgrade pip
           pip install .[dev]
