--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -1,10 +1,10 @@
 
 simulator:
   # one seed required for each episode
-  seed: [ 810, 738, 655, 367, 36, 653, 753, 977, 716, 311, 112, 417, 599, 666, 721, 128, 456, 564, 178, 97, 764, 242, 257, 253, 4, 217, 171, 536, 122, 716, 933, 850, 271, 410, 195, 172, 958, 274]
-  walking: False
+  seed: [837, 439, 642, 316, 202, 409, 627, 834, 977, 189, 401, 719, 810, 738, 655, 367, 36, 653, 753, 977, 716, 311, 112, 417, 599, 666, 721, 128, 456, 564, 178, 97, 764, 242, 257, 253, 4, 217, 171, 536, 122, 716, 933, 850, 271, 410, 195, 172, 958, 274]
+  walking: True
   num_agents: 20
-  num_targets: 1
+  num_targets: 1 # for now this must be at least 1. This needs to be fixed.
   num_ground_targets: 0
   submesh_target: True
   submesh_show_points: False # put spheres on at least some of the submesh vertices
@@ -16,13 +16,13 @@ simulator:
   # run_main_folder: "collab_env/sim/runs"
   run_main_folder: "sim-output"
   run_sub_folder_prefix: "boids_sim_run"
-  show_trajectories: False
+  show_trajectories: True
   trajectory_frame_limit: 2000
 
 
 visuals:
   store_video: False
-  show_visualizer: False
+  show_visualizer: True
   width: 1920
   height: 1280
   video_codec: '*mpv4'
@@ -31,14 +31,14 @@ visuals:
   agent_shape: 'sphere'
   agent_color: [0.18995, 0.07176, 0.23217]
   agent_scale: 5.0
-  target_scale: 0.5
+  target_scale: 5
   target_mesh_init_color: [1,0,1]
   target_mesh_color: [0,1,0]
 
 tracks:
   color_by_time: True
-  number_of_color_groups: 1500
-  track_color_rate: 1
+  number_of_color_groups: 1000 # this should divide the number of frames evenly to get full colors
+  track_color_rate: 1 # this is ignored now I think.
 
 
 environment:
@@ -50,7 +50,7 @@ environment:
   init_range_low: 0.4
   init_range_high: 0.6
   height_init_max: 450
-  target_position: [[750, 20, 750]]
+  target_position: [[7500, 20, 750]]
 
 agent:
   min_ground_separation: 7.5
@@ -63,7 +63,7 @@ agent:
   alignment_weight: 1.0
   cohesion_weight: 0.5
   ground_weight: 0.0
-  target_weight: [0.002]
+  target_weight: [10.0] #[0.002]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
@@ -74,8 +74,8 @@ agent:
   height_range_low: 0.0
   height_range_high: 1.0
   height_init_min: 100
-  height_init_max: 300
-  random_walk: True
+  height_init_max: 200
+  random_walk: False
 
 meshes:
     # mesh_scene: ''
@@ -95,11 +95,11 @@ meshes:
 
 files:
     output_folder_prefix: 'boids_sim_runs' # which of these am I using?
-    trajectory_file: 'all'
-    trajectory_folder: 'sim-output/boids_sim_run-FOR-GNN-started-20250821-143821'
+    trajectory_file: 'episode-0-completed-20250822-203226.parquet'
+    trajectory_folder: 'good-runs/sim_independent_tree_target_started_20250822_202708'
 
 logging:
   logfile_prefix: 'logfile'
-  log_level: 'INFO'
+  log_level: 'DEBUG'
   logging: True
-  log_functions: []
+  log_functions: ['init_trajectory_lines'] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
