Added support for multiple submeshes.

--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -2,16 +2,16 @@
 simulator:
   # one seed required for each episode
   seed: [837, 439, 642, 316, 202, 409, 627, 834, 977, 189, 401, 719, 810, 738, 655, 367, 36, 653, 753, 977, 716, 311, 112, 417, 599, 666, 721, 128, 456, 564, 178, 97, 764, 242, 257, 253, 4, 217, 171, 536, 122, 716, 933, 850, 271, 410, 195, 172, 958, 274]
-  walking: True
+  walking: False
   num_agents: 20
-  num_targets: 1 # for now this must be at least 1. This needs to be fixed.
-  num_ground_targets: 0
+  num_targets: 4 # for now this must be at least 1. This needs to be fixed.
+  num_ground_targets: 2
   submesh_target: True
   submesh_show_points: False # put spheres on at least some of the submesh vertices
   moving_targets: False
-  num_episodes: 50
+  num_episodes: 1
   num_frames: 2000
-  target_creation_time: 500 # min is 1, which creates the target at the beginning of the episode.
+  target_creation_time: [500, 600, 700, 800] # min is 1, which creates the target at the beginning of the episode.
   show_box: False
   # run_main_folder: "collab_env/sim/runs"
   run_main_folder: "sim-output"
@@ -31,9 +31,9 @@ visuals:
   agent_shape: 'sphere'
   agent_color: [0.18995, 0.07176, 0.23217]
   agent_scale: 5.0
-  target_scale: 5
-  target_mesh_init_color: [1,0,1]
-  target_mesh_color: [0,1,0]
+  target_scale: 10.0
+  target_mesh_init_color: [[1,0,1], [1,0,1]] # now this is a list, one for each submesh
+  target_mesh_color: [[0,1,0], [0,1,1]] # now this is a list, one for each submesh
 
 tracks:
   color_by_time: True
@@ -50,7 +50,7 @@ environment:
   init_range_low: 0.4
   init_range_high: 0.6
   height_init_max: 450
-  target_position: [[7500, 20, 750]]
+  target_position: [[750, 500, 750], [500, 100, 100], [300, 100, 750], [800,800,200]]
 
 agent:
   min_ground_separation: 7.5
@@ -63,7 +63,7 @@ agent:
   alignment_weight: 1.0
   cohesion_weight: 0.5
   ground_weight: 0.0
-  target_weight: [10.0] #[0.002]
+  target_weight: [0.002, 0.001, 0.5, 1.0] #[0.002]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
@@ -90,7 +90,7 @@ meshes:
     #scene_angle: [0.0, 0.0, 0.0]
     #mesh_scene: 'meshes/example_mesh.ply'
     #scene_angle: [-10.0, 0.0, -115.0]
-    sub_mesh_target: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
+    sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply', 'meshes/labeled_meshes/query-tree_top-cluster.ply'] # list, one for each submesh
     # sub_mesh_angle: [0.0, 0.0, 0.0]
 
 files:
@@ -102,4 +102,4 @@ logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
   logging: True
-  log_functions: ['init_trajectory_lines'] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
+  log_functions: ['__init__'] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
