--- a/tests/sim_test_1_config.yaml
+++ b/tests/sim_test_1_config.yaml
@@ -8,7 +8,7 @@ simulator:
   submesh_target: False
   num_episodes: 3
   num_frames: 5
-  target_creation_time: 1 # min is 1, which creates the target at the beginning of the episode.
+  target_creation_time: [1] # min is 1, which creates the target at the beginning of the episode.
   show_box: True
   run_main_folder: "sim-output/tests-sim-runs"
   run_sub_folder_prefix: "boids_sim_run-1"
@@ -33,8 +33,8 @@ visuals:
   agent_color: [ 0, 1, 0 ]
   agent_scale: 20.0
   target_scale: 2.0
-  target_mesh_init_color: [ 1,0,1 ]
-  target_mesh_color: [ 0,1,0 ]
+  target_mesh_init_color: [[ 1,0,1 ]]
+  target_mesh_color: [[ 0,1,0 ]]
 
 environment:
   max_dist_from_center: 3
@@ -80,7 +80,7 @@ meshes:
     scene_angle: [-90.0, 0.0, 0.0]
     # mesh_scene: 'meshes/example_mesh.ply'
     #scene_angle: [-10.0, 0.0, -115.0]
-    sub_mesh_target: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
+    sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply']
 
 files:
     output_folder_prefix: 'boids_sim_runs'
