--- a/tests/sim_test_consistent_config.yaml
+++ b/tests/sim_test_consistent_config.yaml
@@ -10,7 +10,7 @@ simulator:
   moving_targets: False
   num_episodes: 1
   num_frames: 20
-  target_creation_time: 5  # min is 1, which creates the target at the beginning of the episode.
+  target_creation_time: [5]  # min is 1, which creates the target at the beginning of the episode.
   show_box: False # should move this to visuals
   # run_main_folder: "collab_env/sim/runs"
   run_main_folder: "sim-output/tests-sim-runs"
@@ -31,8 +31,8 @@ visuals:
   agent_color: [0, 0, 1]
   agent_scale: 5.0
   target_scale: 0.5
-  target_mesh_init_color: [1,0,1]
-  target_mesh_color: [0,1,0]
+  target_mesh_init_color: [[1,0,1]]
+  target_mesh_color: [[0,1,0]]
 
 tracks:
   color_by_time: True
@@ -89,7 +89,7 @@ meshes:
     #scene_angle: [0.0, 0.0, 0.0]
     #mesh_scene: 'meshes/example_mesh.ply'
     #scene_angle: [-10.0, 0.0, -115.0]
-    sub_mesh_target: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
+    sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply']
     # sub_mesh_angle: [0.0, 0.0, 0.0]
 
 files:
