--- a/tests/sim_test_1_config.yaml
+++ b/tests/sim_test_1_config.yaml
@@ -8,10 +8,10 @@ simulator:
   submesh_target: False
   num_episodes: 3
   num_frames: 5
-  target_creation_time: [1] # min is 1, which creates the target at the beginning of the episode.
+  target_creation_time: [1,2,3,4,5] # min is 1, which creates the target at the beginning of the episode.
   show_box: True
-  run_main_folder: "sim-output/tests-sim-runs"
-  run_sub_folder_prefix: "boids_sim_run-1"
+  run_main_folder: "sim-output/tests-sim-runs-1"
+  run_sub_folder_prefix: "boids_sim_run_1"
   show_trajectories: False
 
 
