--- a/tests/sim_test_1_wth_vis_config.yaml
+++ b/tests/sim_test_1_wth_vis_config.yaml
@@ -1,46 +1,47 @@
 
 simulator:
-  seed: [750]
-  walking: False
+  seed: [1250, 100, 200] # one seed required for each episode
+  walking: True
   num_agents: 20
-  num_targets: 1
-  num_ground_targets: 0
+  num_targets: 5
+  num_ground_targets: 2
   submesh_target: False
-  num_episodes: 1
+  num_episodes: 3
   num_frames: 5
-  target_creation_time: [1, 1, 2, 2, 4]
+  target_creation_time: [1,2,3,4,5] # min is 1, which creates the target at the beginning of the episode.
   show_box: True
-  run_main_folder: "sim-output/tests-sim-runs-2"
-  run_sub_folder_prefix: "boids_sim_run_2"
+  run_main_folder: "sim-output/tests-sim-runs-1-visualizer"
+  run_sub_folder_prefix: "boids_sim_run_1"
   show_trajectories: False
+
 
 logging:
   logfile_prefix: 'logfile'
   log_level: 'ERROR'
-  logging: False
+  logging: True
   log_functions: []
 
 visuals:
-  store_video: False
-  show_visualizer: False
-  width: 1280
+  store_video: True
+  show_visualizer: True
+  width: 1080
   height: 720
   video_codec: '*mpv4'
-  video_fps: 20
   video_file_extension: 'mp4'
-  agent_shape: 'cone'
-  agent_color: [0, 1, 0]
-  agent_scale: 2.0
+  video_fps: 30
+  agent_shape: 'sphere'
+  agent_color: [ 0, 1, 0 ]
+  agent_scale: 20.0
   target_scale: 2.0
   target_mesh_init_color: [[ 1,0,1 ]]
   target_mesh_color: [[ 0,1,0 ]]
 
 environment:
   max_dist_from_center: 3
-  box_size: 350
+  box_size: 300
   scene_scale: 200.0
-  scene_position: [175, 20, 175]
   target_speed: 0.1
+  scene_position: [175, 20, 175]
   init_range_low: 0.4
   init_range_high: 0.6
   height_init_max: 500
@@ -65,13 +66,13 @@ agent:
   max_force: 0.1
   mean_init_velocity: 1.0
   variance_init_velocity: 0.2
-  init_range_low: 0.2
-  init_range_high: 0.7
+  init_range_low: 0.4
+  init_range_high: 0.6
   height_range_low: 0.0
   height_range_high: 1.0
-  height_init_min: 200
-  height_init_max: 500
-  random_walk: False
+  height_init_min: 100
+  height_init_max: 300
+  random_walk: True
 
 meshes:
     # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
@@ -80,7 +81,6 @@ meshes:
     # mesh_scene: 'meshes/example_mesh.ply'
     #scene_angle: [-10.0, 0.0, -115.0]
     sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply']
-
 
 files:
     output_folder_prefix: 'boids_sim_runs'
