--- a/tests/sim_test_vis_no_scene_config.yaml
+++ b/tests/sim_test_vis_no_scene_config.yaml
@@ -3,15 +3,15 @@ simulator:
   seed: [750]
   walking: True
   num_agents: 20
-  num_targets: 5
+  num_targets: 1
   num_ground_targets: 2
   submesh_target: False
   num_episodes: 1
   num_frames: 20
-  target_creation_time: 2000
+  target_creation_time: [4]
   show_box: True
-  run_main_folder: "sim-output/tests-sim-runs"
-  run_sub_folder_prefix: "boids_sim_run-2"
+  run_main_folder: "sim-output/tests-sim-runs-vis-no-scene"
+  run_sub_folder_prefix: "boids_sim_run_3"
   show_trajectories: False
 
 logging:
