--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,8 @@ dependencies = [
   "trame-vtk",
   "trame-vuetify",
   "lpips",
-  "scikit-image"
+  "scikit-image",
+  "types-PyYAML",
 ]
 
 [tool.setuptools]                         # NEW
