--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -9,7 +9,7 @@ simulator:
   submesh_target: True
   submesh_show_points: False # put spheres on at least some of the submesh vertices
   moving_targets: False
-  num_episodes: 50
+  num_episodes: 1
   num_frames: 2000
   target_creation_time: [500] # min is 1, which creates the target at the beginning of the episode.
   show_box: False
@@ -21,7 +21,7 @@ simulator:
 
 
 visuals:
-  store_video: True
+  store_video: False
   show_visualizer: False
   width: 1080
   height: 720
