--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -21,10 +21,10 @@ simulator:
 
 
 visuals:
-  store_video: True
-  show_visualizer: False
-  width: 1080
-  height: 720
+  store_video: False
+  show_visualizer: True
+  width: 1920
+  height: 1280
   video_codec: '*mpv4'
   video_fps: 30
   video_file_extension: 'mp4'
@@ -83,7 +83,7 @@ meshes:
     mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
     scene_angle: [-90.0, 0.0, 0.0]
     #mesh_scene: 'meshes/labeled_meshes/mesh.ply'
-    #mesh_scene: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
+    # mesh_scene: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
     #scene_angle: [0.0, 0.0, 0.0]
     # mesh_scene: 'meshes/query-tree.ply'
     # scene_angle: [-90.0, 0.0, 0.0]
@@ -102,4 +102,4 @@ logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
   logging: True
-  log_functions: ['__init__'] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
+  log_functions: [] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
