--- a/.gitignore
+++ b/.gitignore
@@ -90,9 +90,14 @@ docs/build
 site/
 out
 *.matrix.gz
-/docs/source/.ipynb_checkpoints/
-data/
+docs/source/.ipynb_checkpoints/
 config-local/
 *preview*.htm*
-/sim-output/
-/good-runs/
+simulated_data/
+trained_models/
+logs/
+results/
+sim-output/
+good-runs/
+data/
+data
