updated notebooks with the figures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
   "lpips",
   "scikit-image",
   "types-PyYAML",
+  "starbars",
 ]
 
 [tool.setuptools]                         # NEW
