--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .env
 .envrc
+tests/.ipynb_checkpoints
 *.ipynb_checkpoints
+trained_models/*.pkl
+trained_models/*.pt
+trained_models
 *.py[cod]
 .DS_Store
 # C extensions
