added rich to project requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
   "scikit-image",
   "types-PyYAML",
   "starbars",
+  "rich",
 ]
 
 [tool.setuptools]                         # NEW
