--- a/tests/sim_test_vis_no_scene_config.yaml
+++ b/tests/sim_test_vis_no_scene_config.yaml
@@ -55,6 +55,7 @@ agent:
   min_ground_separation: 3.0
   min_separation: 4.0
   neighborhood_dist: 20.0
+  random_weight: 0.0
   separation_weight: 3.0
   alignment_weight: 0.5
   cohesion_weight: 0.1
