--- a/tests/sim_test_1_wth_vis_config.yaml
+++ b/tests/sim_test_1_wth_vis_config.yaml
@@ -29,7 +29,7 @@ visuals:
   video_codec: '*mpv4'
   video_file_extension: 'mp4'
   video_fps: 30
-  agent_shape: 'sphere'
+  agent_shape: [[20, 'sphere']]
   agent_color: [ 0, 1, 0 ]
   agent_scale: 20.0
   target_scale: 2.0
