Updated default config file for multiple agent types.

--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -28,7 +28,7 @@ visuals:
   video_codec: '*mpv4' # only mp4 has been tested
   video_fps: 30
   video_file_extension: 'mp4'
-  agent_shape: 'sphere'
+  agent_shape: [[10, 'sphere'], [10,'sphere']] # make this a list of pairs (number of agents, shape), so the environment can correctly draw variants.
   agent_color: [] # [0.18995, 0.07176, 0.23217]
   agent_scale: 5.0
   target_scale: 10.0
@@ -77,7 +77,25 @@ agent:
   height_init_min: 100
   height_init_max: 200
   random_walk: False
-  mesh_avoidance: 'no_down' # one of: 'up', 'flat', 'opposite', 'down', 'no_down', 'no_up', 'land'
+  mesh_avoidance: 'up' # one of: 'up', 'flat', 'opposite', 'down', 'no_down', 'no_up', 'land'
+  # agent variants override base agent configuration
+  agent_variants:
+    - type: independent
+      num_agents_of_type: 10
+      random_weight: 1.0
+      separation_weight: 15.0 # 15.0
+      alignment_weight: 0.0 # 1.0
+      cohesion_weight: 0.0 # 0.5
+      ground_weight: 0.0
+      random_walk: False
+    - type: boid
+      num_agents_of_type: 10
+      random_weight: 1.0
+      separation_weight: 15.0 # 15.0
+      alignment_weight: 1.0 # 1.0
+      cohesion_weight: 0.5 # 0.5
+      ground_weight: 0.0
+      random_walk: False
 
 meshes:
     # mesh_scene: ''
