--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,8 +94,8 @@ dev = [
   "pytest-cov",
   "pytest-xdist",
   "pytest-benchmark",
-  "mypy",
-  "mypy-extensions",
+  "mypy==1.18.2",
+  "mypy-extensions==1.1.0",
   "ruff",
   "nbval",
   "nbqa",
