--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
   "types-PyYAML",
   "starbars",
   "rich",
+  "importlib-metadata"
 ]
 
 [tool.setuptools]                         # NEW
