--- a/collab_env/sim/boids/config.yaml
+++ b/collab_env/sim/boids/config.yaml
@@ -10,7 +10,7 @@ simulator:
   submesh_show_points: False # put spheres on at least some of the submesh vertices
   moving_targets: False
   num_episodes: 1
-  num_frames: 200
+  num_frames: 3000
   target_creation_time: [500] # min is 1, which creates the target at the beginning of the episode.
   show_box: False
   # run_main_folder: "collab_env/sim/runs"
@@ -23,14 +23,14 @@ simulator:
 visuals:
   store_video: False
   show_visualizer: True
-  width: 1080     # sometimes too high a resolution fails, so may need to go smaller
-  height: 720
+  width: 1920     # sometimes too high a resolution fails, so may need to go smaller
+  height: 1280
   video_codec: '*mpv4' # only mp4 has been tested
   video_fps: 30
   video_file_extension: 'mp4'
   agent_shape: [[20, 'sphere']] # make this a list of pairs (number of agents, shape), so the environment can correctly draw variants.
   agent_color: [] # [0.18995, 0.07176, 0.23217]
-  agent_scale: 5.0
+  agent_scale: 75.0
   target_scale: 10.0
   target_mesh_init_color: [[1,0,1], [0,0,1]] # now this is a list, one for each submesh
   target_mesh_color: [[0,1,0], [0,1,1]] # now this is a list, one for each submesh
@@ -60,11 +60,11 @@ agent:
   min_separation: 20.0
   neighborhood_dist: 80.0
   random_weight: 1.0
-  separation_weight: 15.0
+  separation_weight: 200.0
   alignment_weight: 1.0
   cohesion_weight: 0.5
-  ground_weight: 0.0
-  target_weight: [0.002, -1.0, 0.0, 0.0] #[0.002]
+  ground_weight: 200.0
+  target_weight: [2.0, -1.0, 0.0, 0.0] #[0.002]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
@@ -100,7 +100,8 @@ agent:
 meshes:
     # mesh_scene: ''
     # scene_angle: [0.0, 0.0, 0.0]
-    mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
+    # mesh_scene: 'meshes/Open3dTSDFfusion_mesh.ply'
+    mesh_scene: meshes/C0043/mesh.ply
     scene_angle: [-90.0, 0.0, 0.0]
     #mesh_scene: 'meshes/labeled_meshes/mesh.ply'
     # mesh_scene: 'meshes/labeled_meshes/query-tree_top-cluster.ply'
@@ -110,8 +111,8 @@ meshes:
     #scene_angle: [0.0, 0.0, 0.0]
     #mesh_scene: 'meshes/example_mesh.ply'
     #scene_angle: [-10.0, 0.0, -115.0]
-    sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply']  # 'meshes/labeled_meshes/query-tree_top-cluster.ply'] # list, one for each submesh
-    # sub_mesh_target: ['meshes/C0043/query-feeder_top-cluster.ply']# 'meshes/labeled_meshes/query-tree_top-cluster.ply'] # list, one for each submesh
+    # sub_mesh_target: ['meshes/labeled_meshes/query-tree_top-cluster.ply']  # 'meshes/labeled_meshes/query-tree_top-cluster.ply'] # list, one for each submesh
+    sub_mesh_target: ['meshes/C0043/query-feeder_top-cluster.ply']# 'meshes/labeled_meshes/query-tree_top-cluster.ply'] # list, one for each submesh
     # sub_mesh_angle: [0.0, 0.0, 0.0]
 
 files:
