--- a/collab_env/sim/boids/config_multitype.yaml
+++ b/collab_env/sim/boids/config_multitype.yaml
@@ -22,15 +22,15 @@ simulator:
 
 visuals:
   store_video: True
-  show_visualizer: False
-  width: 1080     # sometimes too high a resolution fails, so may need to go smaller
-  height: 720
+  show_visualizer: True
+  width: 1920     # sometimes too high a resolution fails, so may need to go smaller
+  height: 1280
   video_codec: '*mpv4' # only mp4 has been tested
   video_fps: 30
   video_file_extension: 'mp4'
-  agent_shape: [[10, 'sphere'], [10,'sphere']] # make this a list of pairs (number of agents, shape), so the environment can correctly draw variants.
+  agent_shape: [[20, 'sphere']]#[[10, 'sphere'], [10,'sphere']] # make this a list of pairs (number of agents, shape), so the environment can correctly draw variants.
   agent_color: [] # [0.18995, 0.07176, 0.23217]
-  agent_scale: 5.0
+  agent_scale: 3.0
   target_scale: 10.0
   target_mesh_init_color: [[1,0,1], [0,0,1]] # now this is a list, one for each submesh
   target_mesh_color: [[0,1,0], [0,1,1]] # now this is a list, one for each submesh
@@ -57,14 +57,14 @@ agent:
   ground_avoidance_mean: 1.0
   ground_avoidance_variance: 0.01
   ground_avoidance_max_speed: 0.1
-  min_separation: 20.0
+  min_separation: 40.0
   neighborhood_dist: 80.0
   random_weight: 0.0 # how much randomness should be in the agents' actions.
   separation_weight: 0.0 # 15.0
-  alignment_weight: 1.0 # 1.0
+  alignment_weight: 0.0 # 1.0
   cohesion_weight: 0.0 # 0.5
   ground_weight: 0.0
-  target_weight: [0.02, -1.0, 0.0, 0.0] #[0.002]
+  target_weight: [2.0, -1.0, 0.0, 0.0] #[0.002]
   max_speed: 1.0
   min_speed: 0.1
   max_force: 0.1
@@ -80,21 +80,29 @@ agent:
   mesh_avoidance: 'up' # one of: 'up', 'flat', 'opposite', 'down', 'no_down', 'no_up', 'land'
   # agent variants override base agent configuration
   agent_variants:
-    - type: independent
+#    - type: independent
+#      num_agents_of_type: 10
+#      random_weight: 1.0
+#      separation_weight: 0.0 # 15.0
+#      alignment_weight: 0.0 # 1.0
+#      cohesion_weight: 0.0 # 0.5
+#      ground_weight: 100.0
+#      random_walk: False
+    - type: independent_plus_separation
       num_agents_of_type: 10
       random_weight: 1.0
-      separation_weight: 15.0 # 15.0
+      separation_weight: 400.0 # 15.0
       alignment_weight: 0.0 # 1.0
       cohesion_weight: 0.0 # 0.5
-      ground_weight: 0.0
+      ground_weight: 100.0
       random_walk: False
     - type: boid
       num_agents_of_type: 10
-      random_weight: 1.0
-      separation_weight: 15.0 # 15.0
+      random_weight: 0.1
+      separation_weight: 400.0 # 15.0
       alignment_weight: 1.0 # 1.0
       cohesion_weight: 0.5 # 0.5
-      ground_weight: 0.0
+      ground_weight: 100.0
       random_walk: False
 
 meshes:
@@ -123,5 +131,5 @@ files:
 logging:
   logfile_prefix: 'logfile'
   log_level: 'DEBUG'
-  logging: True
+  logging: False
   log_functions: [] #['__main__', 'plot_trajectories', 'save_image_to_file', '_render_frame', 'reset']
